*master

* updated copyright
* reduced visibility of 'sn_set_navigation' to protected

*2.4.1

* removing depencency to rails. It installs the newest rails, even if a matching version is present. why is that?

*2.4.0

* added Rails3 compatibility
* added Jeweler::Gemcutter Tasks to Rakefile

*2.2.3

* changed error handling in config-file. Do not ignore errors in config-file anymore. 
* only load config-file if it is present. Needed when directly providing items in render_navigation.

*2.2.2

* added lib/simple-navigation.rb to allow 'require simple-navigation' or 'config.gem "simple-navigation"'

*2.2.1

* Corrected URL to API-Doc on rubyforge in README

*2.2.0

* Allow Ranges for :level option. Credits to Ying Tsen Hong.
* Changing the API of Helpers#render_navigation. Now supports Ranges for :level option and :expand_all to render all levels as expanded. Old Api is still supported, but deprecated.
* Deprecated render_all_levels in config-file.

*2.1.0

* included Ben Marini's commit which allows individual id-generators. Thanks Ben!
* added ability to specify navigation items through items_provider. This is useful for generating the navigation dynamically (e.g. from database)
* items can now even be passed directly into render_navigation method.

*2.0.1

* fixed handling of a non-existent explicit navigation item for a navigation context

*2.0.0

* added auto_highlight feature. Active navigation is determined by comparing urls, no need to explicitly set it in the controllers anymore. Thanks to Jack Dempsey and Florian Hanke for the support on this.
* added ability to create multi-level navigations (not just limited to primary and secondary navigation). Thanks again to Jack Dempsey for the motivation ;-) 
* simplified the process to explicitly set the navigation in the controller (where needed) - only deepest level has to be specified
* made auto_highlight feature configurable both on global and item_container's level 